--- a/views/app.html
+++ b/views/app.html
@@ -229,11 +229,11 @@
     <script src="../../assets/js/setting-demo2.js"></script>
 
     <script src="https://unpkg.com/vue@next"></script>
-    <script src="../stores/store.js"></script>
+    <script src="../stores/store-demo.js"></script>
     <script src="../assets/js/main.js"></script>
-    <script src="../components/app.js"></script>
-    <script src="../components/demo01.js"></script>
-    <script src="../components/demo02.js"></script>
+    <script src="../components//demo/app.js"></script>
+    <script src="../components/demo/demo01.js"></script>
+    <script src="../components/demo/demo02.js"></script>
 
     <script>
       $("#displayNotif").on("click", function () {
@@ -269,7 +269,6 @@
       Demo01(app);
       Demo02(app);
       Mount(app);
-
     </script>
   </body>
 </html>
