--- a/views/app.html
+++ b/views/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Tables - Atlantis Lite Bootstrap 4 Admin Dashboard</title>
+    <title>(ﾉﾟ0ﾟ)ﾉ~</title>
     <meta
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
@@ -12,6 +12,10 @@
     <!-- Fonts and icons -->
     <script src="../assets/js/plugin/webfont/webfont.min.js"></script>
     <script>
+      // Page AppID
+      var appID = new URL(window.location).searchParams.get("appid") || 1;
+      console.log('Page AppID: ', appID);
+
       WebFont.load({
         google: { families: ["Lato:300,400,700,900"] },
         custom: {
@@ -34,7 +38,7 @@
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/css/atlantis.min.css" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link rel="stylesheet" href="../assets/css/demo.css" />
+    <!-- <link rel="stylesheet" href="../assets/css/demo.css" /> -->
   </head>
   <body>
     <div class="wrapper">
@@ -206,8 +210,8 @@
         <footer class="footer">
           <div class="container-fluid">
             <div class="copyright ml-auto">
-              2018, made with <i class="fa fa-heart heart text-danger"></i> by
-              <a href="https://www.themekita.com">ThemeKita</a>
+              made with <i class="fa fa-heart heart text-danger"></i> 
+              by ┻━┻ ヘ╰( •̀ε•́ ╰)
             </div>
           </div>
         </footer>
@@ -236,34 +240,37 @@
     <script src="../components/demo/demo02.js"></script>
 
     <script>
-      $("#displayNotif").on("click", function () {
-        var placementFrom = $("#notify_placement_from option:selected").val();
-        var placementAlign = $("#notify_placement_align option:selected").val();
-        var state = $("#notify_state option:selected").val();
-        var style = $("#notify_style option:selected").val();
-        var content = {};
 
-        content.message =
-          'Turning standard Bootstrap alerts into "notify" like notifications';
-        content.title = "Bootstrap notify";
-        if (style == "withicon") {
-          content.icon = "fa fa-bell";
-        } else {
-          content.icon = "none";
-        }
-        content.url = "index.html";
-        content.target = "_blank";
+      // $("#displayNotif").on("click", function () {
+      //   var placementFrom = $("#notify_placement_from option:selected").val();
+      //   var placementAlign = $("#notify_placement_align option:selected").val();
+      //   var state = $("#notify_state option:selected").val();
+      //   var style = $("#notify_style option:selected").val();
+      //   var content = {};
 
-        $.notify(content, {
-          type: state,
-          placement: {
-            from: placementFrom,
-            align: placementAlign,
-          },
-          time: 1000,
-        });
-      });
+      //   content.message =
+      //     'Turning standard Bootstrap alerts into "notify" like notifications';
+      //   content.title = "Bootstrap notify";
+      //   if (style == "withicon") {
+      //     content.icon = "fa fa-bell";
+      //   } else {
+      //     content.icon = "none";
+      //   }
+      //   content.url = "index.html";
+      //   content.target = "_blank";
 
+      //   $.notify(content, {
+      //     type: state,
+      //     placement: {
+      //       from: placementFrom,
+      //       align: placementAlign,
+      //     },
+      //     time: 1000,
+      //   });
+      // });
+      
+      //Create Vue
+      //Register Component
       const app = CreateApp();
       App(app);
       Demo01(app);
