--- a/views/app.html
+++ b/views/app.html
@@ -13,8 +13,8 @@
     <script src="../assets/js/plugin/webfont/webfont.min.js"></script>
     <script>
       // Page AppID
-      var appID = new URL(window.location).searchParams.get("appid") || 1;
-      console.log('Page AppID: ', appID);
+      var appID = new URL(window.location).searchParams.get("appid") || 0;
+      console.log("Page AppID: ", appID);
 
       WebFont.load({
         google: { families: ["Lato:300,400,700,900"] },
@@ -210,7 +210,7 @@
         <footer class="footer">
           <div class="container-fluid">
             <div class="copyright ml-auto">
-              made with <i class="fa fa-heart heart text-danger"></i> 
+              made with <i class="fa fa-heart heart text-danger"></i>
               by ┻━┻ ヘ╰( •̀ε•́ ╰)
             </div>
           </div>
@@ -233,14 +233,17 @@
     <script src="../../assets/js/setting-demo2.js"></script>
 
     <script src="https://unpkg.com/vue@next"></script>
+    <script src="../components/preload-component.js"></script>
     <script src="../stores/store-demo.js"></script>
     <script src="../assets/js/main.js"></script>
-    <script src="../components//demo/app.js"></script>
+
+    <!-- Load Script  -->
+    <!-- Page AppDemo -->
+    <script src="../components/demo/app.js"></script>
     <script src="../components/demo/demo01.js"></script>
     <script src="../components/demo/demo02.js"></script>
 
     <script>
-
       // $("#displayNotif").on("click", function () {
       //   var placementFrom = $("#notify_placement_from option:selected").val();
       //   var placementAlign = $("#notify_placement_align option:selected").val();
@@ -268,14 +271,13 @@
       //     time: 1000,
       //   });
       // });
-      
+
       //Create Vue
       //Register Component
-      const app = CreateApp();
-      App(app);
-      Demo01(app);
-      Demo02(app);
-      Mount(app);
+      var app = CreateApp();
+      if (PreLoadComponents(appID, app)) {
+        Mount(app);
+      }
     </script>
   </body>
 </html>
