--- a/views/app.html
+++ b/views/app.html
@@ -105,7 +105,7 @@
                 >
                   <div class="avatar-sm">
                     <img
-                      src="../../assets/img/profile.jpg"
+                      src="../assets/img/profile.jpg"
                       alt="..."
                       class="avatar-img rounded-circle"
                     />
@@ -117,7 +117,7 @@
                       <div class="user-box">
                         <div class="avatar-lg">
                           <img
-                            src="../../assets/img/profile.jpg"
+                            src="../assets/img/profile.jpg"
                             alt="image profile"
                             class="avatar-img rounded"
                           />
@@ -219,23 +219,35 @@
       </div>
     </div>
     <!--   Core JS Files   -->
-    <script src="../../assets/js/core/jquery.3.2.1.min.js"></script>
-    <script src="../../assets/js/core/popper.min.js"></script>
-    <script src="../../assets/js/core/bootstrap.min.js"></script>
+    <script
+      type="text/javascript"
+      src="../assets/js/core/jquery.3.2.1.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../assets/js/core/popper.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="../assets/js/core/bootstrap.min.js"
+    ></script>
     <!-- jQuery UI -->
     <!-- <script src="../../assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="../../assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script> -->
 
     <!-- jQuery Scrollbar -->
-    <script src="../../assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
+    <script
+      type="text/javascript"
+      src="../assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"
+    ></script>
     <!-- Atlantis JS -->
-    <script src="../../assets/js/atlantis.min.js"></script>
+    <script type="text/javascript" src="../assets/js/atlantis.min.js"></script>
     <!-- Atlantis DEMO methods, don't include it in your project! -->
-    <script src="../../assets/js/setting-demo2.js"></script>
+    <script type="text/javascript" src="../assets/js/setting-demo2.js"></script>
 
-    <script src="https://unpkg.com/vue@next"></script>
+    <script type="text/javascript" src="https://unpkg.com/vue@next"></script>
     <!-- <script src="../stores/store-demo.js"></script> -->
-    <script src="../assets/js/main.js"></script>
+    <script type="text/javascript" src="../assets/js/main.js"></script>
 
     <script type="text/javascript">
       // Load js for main page
