--- a/views/app.html
+++ b/views/app.html
@@ -3,30 +3,20 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>(ﾉﾟ0ﾟ)ﾉ~</title>
-    <meta
-      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
-      name="viewport"
-    />
+    <meta content="width=device-width, initial-scale=1.0, shrink-to-fit=no" name="viewport" />
     <link rel="icon" href="../assets/img/icon.ico" type="image/x-icon" />
 
     <!-- Fonts and icons -->
     <script src="../assets/js/plugin/webfont/webfont.min.js"></script>
     <script>
       // Page AppID
-      var appID =
-        parseInt(new URL(window.location).searchParams.get("appid")) || 1;
+      var appID = parseInt(new URL(window.location).searchParams.get("appid")) || 1;
       console.log("Page AppID: ", appID);
 
       WebFont.load({
         google: { families: ["Lato:300,400,700,900"] },
         custom: {
-          families: [
-            "Flaticon",
-            "Font Awesome 5 Solid",
-            "Font Awesome 5 Regular",
-            "Font Awesome 5 Brands",
-            "simple-line-icons",
-          ],
+          families: ["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"],
           urls: ["../assets/css/fonts.min.css"],
         },
         active: function () {
@@ -47,11 +37,7 @@
         <!-- Logo Header -->
         <div class="logo-header" data-background-color="blue">
           <a href="../index.html" class="logo">
-            <img
-              src="../assets/img/logo.svg"
-              alt="navbar brand"
-              class="navbar-brand"
-            />
+            <img src="../assets/img/logo.svg" alt="navbar brand" class="navbar-brand" />
           </a>
           <button
             class="navbar-toggler sidenav-toggler ml-auto"
@@ -77,38 +63,19 @@
         <!-- End Logo Header -->
 
         <!-- Navbar Header -->
-        <nav
-          class="navbar navbar-header navbar-expand-lg"
-          data-background-color="blue2"
-        >
+        <nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
           <div class="container-fluid">
             <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
               <li class="nav-item toggle-nav-search hidden-caret">
-                <a
-                  class="nav-link"
-                  data-toggle="collapse"
-                  href="#search-nav"
-                  role="button"
-                  aria-expanded="false"
-                  aria-controls="search-nav"
-                >
+                <a class="nav-link" data-toggle="collapse" href="#search-nav" role="button" aria-expanded="false" aria-controls="search-nav">
                   <i class="fa fa-search"></i>
                 </a>
               </li>
 
               <li class="nav-item dropdown hidden-caret">
-                <a
-                  class="dropdown-toggle profile-pic"
-                  data-toggle="dropdown"
-                  href="#"
-                  aria-expanded="false"
-                >
+                <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
                   <div class="avatar-sm">
-                    <img
-                      src="../assets/img/profile.jpg"
-                      alt="..."
-                      class="avatar-img rounded-circle"
-                    />
+                    <img src="../assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle" />
                   </div>
                 </a>
                 <ul class="dropdown-menu dropdown-user animated fadeIn">
@@ -116,20 +83,12 @@
                     <li>
                       <div class="user-box">
                         <div class="avatar-lg">
-                          <img
-                            src="../assets/img/profile.jpg"
-                            alt="image profile"
-                            class="avatar-img rounded"
-                          />
+                          <img src="../assets/img/profile.jpg" alt="image profile" class="avatar-img rounded" />
                         </div>
                         <div class="u-text">
                           <h4>Hizrian</h4>
                           <p class="text-muted">hello@example.com</p>
-                          <a
-                            href="profile.html"
-                            class="btn btn-xs btn-secondary btn-sm"
-                            >View Profile</a
-                          >
+                          <a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
                         </div>
                       </div>
                     </li>
@@ -219,27 +178,15 @@
       </div>
     </div>
     <!--   Core JS Files   -->
-    <script
-      type="text/javascript"
-      src="../assets/js/core/jquery.3.2.1.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="../assets/js/core/popper.min.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="../assets/js/core/bootstrap.min.js"
-    ></script>
+    <script type="text/javascript" src="../assets/js/core/jquery.3.2.1.min.js"></script>
+    <script type="text/javascript" src="../assets/js/core/popper.min.js"></script>
+    <script type="text/javascript" src="../assets/js/core/bootstrap.min.js"></script>
     <!-- jQuery UI -->
     <!-- <script src="../../assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="../../assets/js/plugin/jquery-ui-touch-punch/jquery.ui.touch-punch.min.js"></script> -->
 
     <!-- jQuery Scrollbar -->
-    <script
-      type="text/javascript"
-      src="../assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"
-    ></script>
+    <script type="text/javascript" src="../assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
     <!-- Atlantis JS -->
     <script type="text/javascript" src="../assets/js/atlantis.min.js"></script>
     <!-- Atlantis DEMO methods, don't include it in your project! -->
@@ -288,15 +235,12 @@
       //Load js for child component
       function LoadComponents() {
         let scripts = JsComponents() || [];
-        if (!scripts.length)
-          return Promise.reject("ไม่พบ config load component .js");
+        if (!scripts.length) return Promise.reject("ไม่พบ config load component .js");
 
         var prArr = [];
         scripts.forEach((script) => {
           ((script) => {
-            prArr.push(
-              new Promise((resolve) => $.getScript(script, () => resolve()))
-            );
+            prArr.push(new Promise((resolve) => $.getScript(script, () => resolve())));
           })(script);
         });
         return Promise.all(prArr, () => true);
